<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTopicPresspoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/topic"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:typeface="normal"
        android:visibility="visible"
        app:fontFamily="sans-serif-black"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="33dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvTopicResults"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTopicResults2"
        android:layout_alignStart="@+id/spDivision"
        android:layout_alignLeft="@+id/spDivision"
        android:layout_marginStart="-189dp"
        android:layout_marginLeft="-189dp"
        android:layout_marginTop="11dp"
        android:text="@string/select"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:typeface="normal"
        android:visibility="visible"
        app:fontFamily="sans-serif-black"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="33dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvTopicResults2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTopicPresspoll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/topic2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="14sp"
        android:typeface="normal"
        android:visibility="visible"
        app:fontFamily="sans-serif-black"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="33dp"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/spDistrict"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTopicResults"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spDivision"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spDistrict"
        android:layout_alignParentStart="true"
        android:layout_marginStart="210dp"
        android:layout_marginTop="-24dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/tvSajith"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvFinalSP"
        android:layout_alignEnd="@+id/spDivision"
        android:layout_alignRight="@+id/spDivision"
        android:layout_alignBottom="@+id/spDivision"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="-522dp"
        android:text="@string/candidate2"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvGota"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvFinalGR"
        android:layout_alignBottom="@+id/spDivision"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="-469dp"
        android:layout_toStartOf="@+id/tvFinalGR"
        android:layout_toLeftOf="@+id/tvFinalGR"
        android:text="@string/candidate1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSajith2"
        android:layout_width="208dp"
        android:layout_height="31dp"
        android:layout_below="@+id/spDivision"
        android:layout_alignEnd="@+id/spDivision"
        android:layout_alignRight="@+id/spDivision"
        android:layout_alignBottom="@+id/spDivision"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="185dp"
        android:layout_marginRight="185dp"
        android:layout_marginBottom="-117dp"
        android:text="@string/candidate2"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvGota3"
        android:layout_width="208dp"
        android:layout_height="31dp"
        android:layout_below="@+id/spDivision"
        android:layout_alignEnd="@+id/spDivision"
        android:layout_alignRight="@+id/spDivision"
        android:layout_alignBottom="@+id/spDivision"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="187dp"
        android:layout_marginRight="187dp"
        android:layout_marginBottom="-58dp"
        android:text="@string/candidate1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUNFvotes"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etSLPPvotes"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-33dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="UNF votes"
        android:inputType="number"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="sans" />

    <EditText
        android:id="@+id/etSLPPvotes"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/spDivision"
        android:layout_alignEnd="@+id/spDivision"
        android:layout_alignRight="@+id/spDivision"
        android:layout_alignBottom="@+id/tvSajith2"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="53dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="SLPP votes"
        android:inputType="number"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tvVotes"
        android:layout_width="wrap_content"
        android:layout_height="11dp"
        android:layout_above="@+id/etSLPPvotes"
        android:layout_below="@+id/spDivision"
        android:layout_alignEnd="@+id/spDivision"
        android:layout_alignRight="@+id/spDivision"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Votes" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginBottom="226dp"
        android:text="@string/view" />

    <TextView
        android:id="@+id/tvCumResult"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginEnd="192dp"
        android:layout_marginRight="192dp"
        android:layout_marginBottom="181dp"
        android:text="@string/cumResult" />

    <TextView
        android:id="@+id/tvCumResult3"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:layout_marginBottom="36dp"
        android:text="@string/lead"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvFinalGR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="143dp"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvFinalSP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="97dp"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvLead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="29dp"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="100dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="279dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/add"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>